kubernetes/apps/storage/longhorn-system/longhorn-system/addons/dashboard/longhorn-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
spec:
  basicAuth:
    secret: basic-auth
