kubernetes/apps/storage/longhorn-system/longhorn-system/addons/dashboard/longhorn-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app longhorn-ui-ingress
  labels:
    name: *app
    # app.kubernetes.io/instance:
    kubernetes.io/ingress.class: traefik
  annotations:
    # traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-basic-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: network-oidc-auth@kubernetescrd
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host longhorn.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
  - hosts:
      - longhorn.cloud.icylair.com
    secretName: icylair-com-all-prod
